--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CheezGPT — Unlimited AI, No Queues, $12.99/mo</title>
+  <title>CheezGPT — Unlimited AI Cheese</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://rsms.me/"/>
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
@@ -11,51 +11,39 @@
 </head>
 <body class="bg-black text-white min-h-screen">
 
-  <!-- Hero -->
-  <div class="relative overflow-hidden bg-gradient-to-b from-orange-900/20 to-black">
-    <div class="max-w-6xl mx-auto px-6 pt-20 pb-32 text-center">
-      <img src="https://i.imgur.com/YOUR-LOGO-LINK-HERE.png" alt="CheezGPT" class="mx-auto w-96 drop-shadow-2xl"/>
-      <h1 class="mt-8 text-6xl font-black tracking-tighter bg-gradient-to-r from-orange-400 to-yellow-500 bg-clip-text text-transparent">
+  <div class="relative overflow-hidden bg-gradient-to-b from-orange-900/30 to-black">
+    <div class="max-w-5xl mx-auto px-6 pt-24 pb-32 text-center">
+      <img src="cheezlogo1.jpg" alt="CheezGPT" class="mx-auto w-80 md:w-96 drop-shadow-2xl"/>
+      <h1 class="mt-8 text-6xl md:text-8xl font-black tracking-tighter bg-gradient-to-r from-orange-400 to-yellow-500 bg-clip-text text-transparent">
         CheezGPT
       </h1>
-      <p class="mt-6 text-2xl text-orange-200">Unlimited GPT-4o • Claude 3.5 • Flux • SDXL Turbo</p>
-      <p class="mt-4 text-xl text-gray-400">No token limits. No queues. No bullshit.</p>
+      <p class="mt-8 text-2xl md:text-3xl text-orange-200">Unlimited GPT-4o • Claude 3.5 • Flux • SDXL Turbo</p>
+      <p class="mt-4 text-xl md:text-2xl text-gray-300">No queues. No token limits. Just cheese.</p>
       
-      <div class="mt-12">
-        <button onclick="checkout()" class="px-12 py-6 text-3xl font-bold text-black bg-gradient-to-r from-orange-400 to-yellow-400 rounded-2xl hover:scale-105 transform transition shadow-2xl">
-          GET UNLIMITED – $12.99/month
+      <div class="mt-16">
+        <button onclick="checkout()" class="inline-block px-16 py-8 text-3xl md:text-4xl font-black text-black bg-gradient-to-r from-orange-400 to-yellow-400 rounded-3xl hover:scale-105 transform transition shadow-2xl cursor-pointer">
+          $12.99/month — Get Unlimited Now
         </button>
-        <p class="mt-4 text-gray-500">Cancel anytime • Instant access</p>
+        <p class="mt-6 text-gray-400 text-lg">Instant access • Cancel anytime</p>
       </div>
     </div>
   </div>
 
-  <!-- Features grid -->
-  <div class="max-w-5xl mx-auto px-6 py-20 grid md:grid-cols-3 gap-10">
-    <div class="text-center">
-      <div class="text-6xl">Lightning</div>
-      <p class="mt-4 text-xl">70B models on a single 3060 — faster than OpenAI</p>
-    </div>
-    <div class="text-center">
-      <div class="text-6xl">Cheese Drip</div>
-      <p class="mt-4 text-xl">Unlimited images with Flux & SDXL Turbo</p>
-    </div>
-    <div class="text-center">
-      <div class="text-6xl">No Cap</div>
-      <p class="mt-4 text-xl">One flat price. Use it until the laptop melts.</p>
-    </div>
+  <div class="max-w-4xl mx-auto px-6 py-20 grid md:grid-cols-3 gap-12 text-center">
+    <div><div class="text-6xl">Lightning</div><p class="mt-4 text-xl">3060-powered, faster than OpenAI</p></div>
+    <div><div class="text-6xl">Cheese Drip</div><p class="mt-4 text-xl">Unlimited images & text</p></div>
+    <div><div class="text-6xl">No Cap</div><p class="mt-4 text-xl">One flat price. Use it till the laptop melts.</p></div>
   </div>
 
-  <!-- Footer CTA -->
   <div class="text-center py-20 bg-gradient-to-t from-orange-900/10 to-transparent">
-    <button onclick="checkout()" class="px-16 py-6 text-3xl font-black bg-orange-500 rounded-2xl hover:bg-orange-400 transition">
+    <button onclick="checkout()" class="px-16 py-8 text-4xl font-black bg-orange-500 rounded-3xl hover:bg-orange-400 transition">
       Yeah I want in → $12.99/mo
     </button>
   </div>
 
   <script>
     function checkout() {
-      window.location = "https://buy.stripe.com/YOUR-STRIPE-LINK-HERE";
+      window.location = "https://buy.stripe.com/28E28r2OFfHy1WJcqr9oc00";
     }
   </script>
 </body>
